--- a/Cuaderno/mystyle-day.sty
+++ b/Cuaderno/mystyle-day.sty
@@ -2,7 +2,6 @@
 
 \usepackage[utf8]{inputenc} %codificacion de caracteres
 \usepackage[spanish,es-tabla]{babel} %idioma, con configuracion para tablas en ES
-\usepackage[spanish]{cleveref}
 \usepackage{fancyhdr} %tipo de pagina, LINDA biggrin.gif
 \usepackage[top=2.5cm,bottom=2.5cm,right=3cm,left=3cm]{geometry} %margenes
 \usepackage[rflt]{floatflt} %ni puta idea
@@ -12,6 +11,7 @@
 \usepackage{enumitem} %configuracion listas
 \usepackage{xspace}
 \usepackage{fullpage}
+\usepackage{url}
 \usepackage{hyperref} %hipervinculos
 \hypersetup{
   colorlinks=true,
@@ -19,6 +19,7 @@
   linkcolor=blue,
   citecolor=blue
 }
+\usepackage[spanish]{cleveref}
 %\usepackage{helvet} %esto es pa escribir con Arial en vez de times new roman
 %\renewcommand\familydefault{\sfdefault} %descomenta estas lineas para escribir en arial
 
