--- a/Cuaderno/Dia2.tex
+++ b/Cuaderno/Dia2.tex
@@ -7,11 +7,11 @@
 \usepackage{mystyle-day}
 
 \begin{document}
-% \input{./tex/titulo-dia2.tex}
+\input{./tex/titulo-dia2.tex}
 
-% \section*{Introducción}
-% \input{./tex/introduccion-dia2.tex}
-% \newpage
+\section*{Introducción}
+\input{./tex/introduccion-dia2.tex}
+\newpage
 \input{./tex/dia2.tex}
 
 \end{document}
