--- a/Cuaderno/appInventor.tex
+++ b/Cuaderno/appInventor.tex
@@ -21,3 +21,4 @@
 \newcommand\resources[1]{\path{#1}\xspace}
 \newcommand\parameter[1]{\texttt{#1}\xspace}
 \newcommand\variable[1]{\texttt{#1}\xspace}
+\newcommand\procedure[1]{\texttt{#1}\xspace}
